# harness-engineering-guide

./: .gitignore  CHEATSHEET.md  CLAUDE.md  README.md
case-study/: README.md  agent-instructions.md  api-contract.md  brand-enforcement.md  claude-md.md  integration-gate.md  timeline.md
case-study-harness/: pyproject.toml
case-study-harness/claude/: hooks-config.json
case-study-harness/claude/rules/: case-study-observer.md
case-study-harness/claude/skills/case-study-synthesize/: SKILL.md
case-study-harness/claude/skills/case-study-synthesize/scripts/: read_observations.py
case-study-harness/docs/: architecture.md  interview-summary.md  phase-plan.md  prd.md
case-study-harness/scripts/: log_friction.py  log_git_harness_change.py  log_harness_change.py  log_session_end.py  log_session_summary.py  log_turn_summary.py
case-study-harness/tests/: conftest.py  test_install.py  test_log_friction.py  test_log_git_harness_change.py  test_log_harness_change.py  test_log_session_end.py  test_log_session_summary.py  test_log_tool_use.py  test_log_turn_summary.py  test_log_user_prompt.py
checklists/: context-reset.md  phase-completion.md  pre-merge.md  project-kickoff.md
guide/: 01-foundations.md  02-project-bootstrap.md  03-specification-phase.md  04-context-architecture.md  05-agent-orchestration.md  06-design-intent.md  07-quality-gates.md  08-implementation.md  09-ci-cd-and-deployment.md  10-entropy-management.md  11-failure-modes.md
issues/: refactor-quality-gate-chapter-to-use-python.md
scripts/: init-project.py
templates/: CLAUDE.md
(+21 files in other folders)
