[project]
name = "case-study-harness"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "."]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["scripts", "tests", "install.py"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
